<resources>
    <string name="app_name">StateQuiz</string>
    <string name="state_quiz">State Quiz</string>
    <string name="state_quiz_detail">This app is designed for quizzing the user on
    their knowledge about state capitals in the United States of America. One may also
    look at previous quiz scores.</string>
    <string name="begin">Begin</string>
    <string name="homeDetail">Would you like to view past quiz scores or try to take the quiz?</string>
    <string name="start_new_quiz">Start New Quiz</string>
    <string name="view_past_results">View Past Results</string>
    <string name="past_quiz_scores">Past Quiz Scores</string>
    <string name="resultsTitle">Your score is...</string>
    <string name="resultsButton">Look at past quiz scores</string>
    <string name="quizResults">TextView</string>
    <string name="home">Home Page</string>
    <string name="question">TextView</string>
    <string name="radiobutton">RadioButton</string>
</resources>